Replace ImmutableSet from guava with jdk Set
Relates to https://github.com/crate/crate/issues/10510